fix: fix button styles on small screens;

--- a/style.css
+++ b/style.css
@@ -103,13 +103,25 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 
+}
+
+
+#operations {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+@media (max-width: 512px){
+
   #operations {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
+    gap: 1rem;
 }
-
+}
 #board {
   position: relative;
 }
@@ -129,10 +141,3 @@ button:focus-visible {
 }
 
 
-#operations {
-    display: flex;
-    flex-direction: row;
-    width: 50vw;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
